5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2505.log
== SUBMITION (2019-05-15 10:05:11) 
-- CODE:
from math import*
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

y = 0
i = 0
c = 1

aux = 1
while(i < k):
	y = y + aux* ((x **(c))/ factorial(c))
	i = i + 1
	c = c + 2
	if(aux == 1)
		aux = -1
	else:
		aux = 1
print(round(y, 10))
-- EXECUTION TIME:
0.162864
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 14
    if(aux == 1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:06:45) 
-- CODE:
from math import*
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

y = 0
i = 0
c = 1

aux = 1
while(i < k):
	y = y + aux* ((x **(c))/ factorial(c))
	i = i + 1
	c = c + 2
	if(aux == 1)
		aux = -1
	else:
		aux = 1
print(round(y, 10))
-- EXECUTION TIME:
0.116634
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 14
    if(aux == 1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:07:36) 
-- CODE:
from math import*
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

y = 0
i = 0
c = 1

aux = 1
while(i < k):
	y = y + aux* ((x **(c))/ factorial(c))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(y, 10))
-- EXECUTION TIME:
0.107853
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
